<resources>
    <string name="app_name">Siyikhipha</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Login</string>
    <string name="username_editText_label">Enter Your Username</string>
    <string name="password_editText_label">Enter Your Password</string>
    <string name="register_textView_label">Register Here!</string>
    <string name="login_button_label">Login</string>

    <string name="surname_editText_label">Enter Your Surname</string>
    <string name="confirm_password_editText_label">Confirm Password</string>
    <string name="name_textView_label">Enter Your Name</string>
    <string name="email_editText_label">Enter Your Email</string>
    <string name="regster_button_label">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="title_activity_merchandise">MerchandiseActivity</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="title_activity_modelling">ModellingActivity</string>
    <string name="title_activity_amateur">AmateurActivity</string>
    <string name="upload_button_label">Upload</string>
    <string name="upload_textView_label">Click On Image to set your get upload image from gallery</string>
    <string name="amateur_image_name_textView_label">Enter Your Image Name</string>
    <string name="back_menu_label">Back</string>
    <string name="menu_menu_label">Return To Main Menu</string>
    <string name="view_model_menu_label">View Models</string>
    <string name="title_activity_model_rating">ModelRatingActivity</string>
    <string name="rating_textView_label">Rate Model</string>
    <string name="like_imageButton_label">Like</string>
    <string name="title_activity_amateur_view">AmateurViewActivity</string>
    <string name="rating_model_ratingBar_label">Submit Rating</string>
    <string name="title_activity_upload_audio">UploadAudioActivity</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="title_activity_event_schedule">EventScheduleActivity</string>
    <string name="title_activity_upload_cultural">UploadCulturalActivity</string>
    <string name="title_cultural_item_label">Enter The Item Name</string>
    <string name="city_cultural_item_label">Enter The Item City</string>
    <string name="town_cultural_item_label">Enter The Item Town</string>
    <string name="area_cultural_item_label">Enter The Item Area</string>
    <string name="contact_cultural_item_label">Enter Your Contact Method</string>
    <string name="price_cultural_item_label">Enter The Item Price</string>
    <string name="upload_cultural_item_label">Upload</string>
    <string name="title_activity_upload_clothering">UploadClotheringActivity</string>
    <string name="line__clothering_label">Enter Your Clothering Line Name</string>
    <string name="line_price_clothering_label">Enter The Clothering Price</string>
    <string name="title_activity_clothering">ClotheringActivity</string>
    <string name="title_activity_upload_event">UploadEventActivity</string>
    <string name="event_title_editText_label">Enter The Event Title</string>
    <string name="event_area_editText_label">Enter The Event Area</string>
    <string name="event_date_ediText_label">Enter The Event Date</string>
    <string name="event_door_price_editText_label">Enter The Price at The Door</string>
    <string name="event_vip_price_editText_label">Enter The Vip Price</string>
    <string name="event_general_price_editText_label">Enter The General Price</string>
    <string name="title_activity_open_event">OpenEventActivity</string>
    <string name="title_activity_open_event_view">OpenEventViewActivity</string>
    <string name="name_recommandation_name_label">Enter Name:</string>
    <string name="email_recommandation_name_label">Enter Email:</string>
    <string name="send_recommandation_name_label">Send Email</string>
    <string name="cancel_recommandation_name_label">Cancel:</string>
    <string name="title_activity_send_recommandation">SendRecommandationActivity</string>
    <string name="title_activity_promotional">PromotionalActivity</string>
    <string name="title_activity_line_up">LineUpActivity</string>
    <string name="line_up_menu_label">Line Up</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_capture_image">CaptureImageActivity</string>
    <string name="title_activity_video_upload">VideoUploadActivity</string>
    <string name="title_activity_image_selection">ImageSelectionActivity</string>

</resources>
