<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="macmain.co.za.siyikhipha.UploadClotheringActivity"
    tools:showIn="@layout/activity_upload_clothering"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_textView_label"
            android:ems="10"
            android:id="@+id/etUploadClotheringName" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/line__clothering_label"
            android:ems="10"
            android:id="@+id/etUploadClotheringLine" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/contact_cultural_item_label"
            android:ems="10"
            android:id="@+id/etUploadClotheringContact"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/line_price_clothering_label"
            android:id="@+id/etUploadClotheringPrice" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:id="@+id/ivUploadClothering"
            android:background="@drawable/upload"/>




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUploadClothering"
            android:hint="@string/upload_cultural_item_label"
            android:enabled="false" />
    </LinearLayout>


</ScrollView>
