<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="macmain.co.za.siyikhipha.UploadEventActivity"
    tools:showIn="@layout/activity_upload_event"
    android:background="@color/colorBackground" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/event_title_editText_label"
            android:ems="10"
            android:id="@+id/etOpenEventTitle" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/event_area_editText_label"
            android:ems="10"
            android:id="@+id/etOpenEventArea" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/event_date_ediText_label"
            android:id="@+id/etOpenEventDate" />

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="400dp"
           android:id="@+id/ivOpenEvent"
           android:src="@drawable/upload"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOpenGeneralPrice"
        android:inputType="numberDecimal"
        android:hint="@string/event_general_price_editText_label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etOpenVipPrice"
            android:inputType="numberDecimal"
            android:hint="@string/event_vip_price_editText_label"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etOpenDoorPrice"
            android:inputType="numberDecimal"
            android:hint="@string/event_door_price_editText_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Start Time"
                android:id="@+id/text1"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="End Time"
                android:id="@+id/text2"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <TimePicker
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/startPicker"
                android:layout_weight="1"/>


            <TimePicker
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/endPicker"
                android:layout_weight="1"
             />

        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUploadOpenEvent"
            android:text="@string/upload_button_label"
            android:enabled="false" />

    </LinearLayout>

</ScrollView>
