<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="macmain.co.za.siyikhipha.Login"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/first"
        android:id="@+id/ivMacMain"
        android:orientation="vertical">

    </LinearLayout>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:id="@+id/etUsername"
        android:hint="@string/username_editText_label"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etPassword"
        android:hint="@string/password_editText_label"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvRegister"
        android:layout_gravity="right"
        android:text="@string/register_textView_label"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_button_label"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:backgroundTint="?attr/colorPrimary"
        android:background="?attr/colorPrimary"/>
</LinearLayout>
