<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="macmain.co.za.siyikhipha.ModelRatingActivity"
    tools:showIn="@layout/activity_model_rating"
    android:orientation="vertical">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/ivRatingModel"
        android:src="@drawable/model"
         />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin" >


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:text="@string/rating_textView_label"
           android:id="@+id/textView3"
           android:layout_marginTop="68dp"
           android:layout_alignParentTop="true"
           android:layout_alignLeft="@+id/ratingBarModel"
           android:layout_alignStart="@+id/ratingBarModel" />

       <RatingBar
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/ratingBarModel"
           android:layout_below="@+id/textView3"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true" />

       <ImageButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/ibModelLike"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:layout_marginRight="42dp"
           android:layout_marginEnd="42dp"
           android:layout_alignTop="@+id/ratingBarModel"
           android:layout_marginTop="15dp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:text="@string/like_imageButton_label"
           android:id="@+id/textView4"
           android:layout_alignTop="@+id/textView3"
           android:layout_alignLeft="@+id/ibModelLike"
           android:layout_alignStart="@+id/ibModelLike" />

       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/rating_model_ratingBar_label"
           android:id="@+id/btnRatingModel"
           android:layout_below="@+id/ratingBarModel"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_marginTop="10dp"/>

   </RelativeLayout>



</LinearLayout>
